copy edits, fixed alignment of brand essentials in top nav

--- a/style/style.css
+++ b/style/style.css
@@ -211,6 +211,10 @@ ul {
     display: flex;
 }
 
+.nav-item p {
+    display: inline-block;
+}
+
 .nav .dropdown {
     display: none;
     position: absolute;
